# google-drive-manager

./: .gitignore  README.md  functions.py  main.py  pyproject.toml
test_upload/: documento 1.docx
